# calvin_and_hobbes_viewer

./: .gitignore  pyproject.toml
calvin/: __main__.py  api.py  comic_viewer.py  daemon.py  db.py  publisher.py  util.py  white_noise_label.py
calvin/data/: arcs.yaml
etc/: .xsession
etc/lightdm/: 10-autologin.conf
etc/systemd/: calvin-api.service  calvin-daemon.service  calvin-daemon.timer  calvin-daily.service  calvin-xhost.service
hobbes/: index.html  package-lock.json  package.json  vite.config.ts
hobbes/src/: index.tsx  style.css
hobbes/src/components/: ComicList.tsx  ComicPicker.tsx  Controls.tsx  Header.tsx
hobbes/src/pages/Arcs/: index.tsx
hobbes/src/pages/Home/: index.tsx  style.css
img/: apps  make_image.sh  setup.sh
scripts/: install.sh  xhost_calvin.sh
