[tool.poetry]
name = "calvin"
version = "0.1.0"
description = ""
authors = ["Allie Fitter <fitterj@gmail.com>"]
readme = "README.md"
packages = [{ include = "calvin" }]
include = [
    { path = "calvin/data", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
calvin = "calvin.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.0.0"
paho-mqtt = "^2.1.0"
pyyaml = "^6.0.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
typer = "^0.13.1"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
